--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@sentry/react-native": "~6.14.0",
     "date-fns": "^4.1.0",
+    "effect": "^3.17.9",
     "expo": "~53.0.22",
     "expo-asset": "~11.1.5",
     "expo-audio": "~0.4.9",
