--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "devDependencies": {
     "prettier": "3.5.3",
-    "turbo": "2.5.2"
+    "turbo": "2.5.2",
+    "@effect/build-utils": "^0.8.3",
+    "@effect/eslint-plugin": "^0.3.2",
+    "@effect/language-service": "^0.20.1",
+    "effect": "^3.17.9"
   },
   "engines": {
     "node": ">=18.8.0"
