Add expo-localization dependency and update app.json to include it in the native app configuration

--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -62,7 +62,8 @@
           "organization": "turbo-expo"
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
